updated model