@@ -5,12 +5,19 @@ import java.lang.reflect.InvocationTargetException;
 import java.util.Optional;
 
 import org.nanotek.BaseInstantiationException;
-import org.nanotek.Id;
 
-public  interface BaseBean<K extends Serializable> extends Id<K>{
-	static <K extends BaseBean<?>> Optional<K> newInstance(Class<K> clazz) throws BaseInstantiationException { 
+public  interface BaseBean<K extends Serializable>{
+	static <K extends BaseBean<?>> Optional<K> newBaseBeanInstance(Class<K> clazz) throws BaseInstantiationException { 
 		try {
-			return Optional.of(clazz.getDeclaredConstructor(null).newInstance());
+			return Optional.of(clazz.getDeclaredConstructor().newInstance());
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+				| NoSuchMethodException | SecurityException e) {
+			throw new BaseInstantiationException(e);
+		}
+	}
+	static <K extends BaseBean<?>, S extends K> Optional<S> newBaseBeanInstance(Class<S> clazz , Object[] args , Class<?>... classArgs  ) throws BaseInstantiationException { 
+		try {
+			return Optional.of(clazz.getDeclaredConstructor(classArgs).newInstance(args));
 		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
 				| NoSuchMethodException | SecurityException e) {
 			throw new BaseInstantiationException(e);
